# paighaam

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  security.py
app/adapters/: __init__.py
app/core/: config.py
