[tool.poetry]
name = "paighaam"
version = "0.1.0"
description = ""
authors = ["Ali Raza <dejavu87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.2"
python-dotenv = "^0.15.0"
click = "^7.1.2"
requests = "^2.25.1"
slowapi = "^0.1.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
