[tool.poetry]
name = "paighaam"
version = "0.1.0"
description = ""
authors = ["Ali Raza <dejavu87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
python-dotenv = "^1.0.1"
click = "^8.1.7"
requests = "^2.31.0"
slowapi = "^0.1.8"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
